# ai-crew-connect-testcase

./: .env.template  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/endpoints/: example.py  response.py  training.py
app/db/: client.py
app/models/: conversation.py  firestore_models.py  training.py
app/services/: openai.py  response.py  training.py
app/tests/: test_openai_service.py  test_response.py
app/utils/: enum.py
